# hotspot-analyzer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  delete-release.yml  release.yml
scripts/: summarize.sh
src/: lib.rs  main.rs
src/analyzer/: error.rs  git.rs  metrics.rs  mod.rs
