[package]
authors = ["mmocchi <mottyzzz@gmail.com>"]
categories = ["development-tools", "command-line-utilities"]
description = "A Git repository analyzer that identifies code hotspots"
edition = "2021"
keywords = ["git", "analysis", "hotspot", "code-quality"]
license = "MIT"
name = "hotspot-analyzer"
readme = "README.md"
repository = "https://github.com/mmocchi/hotspot-analyzer"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "4.4", features = ["derive"]}
csv = "1.3"
git2 = "0.17"
indexmap = "2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
